2008-01-15  Michael Natterer  <mitch@gimp.org>

	Merged from trunk:

	* app/tools/gimpimagemaptool.c (gimp_image_map_tool_notify_preview):
	check for image_map_tool->image_map also when the preview is
	switched on, not only when it's switched off.

2008-01-15  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/common/bumpmap.c
	* plug-ins/script-fu/scripts/swirltile.scm: applied patch from
	Ulf-D. Ehlert that catches a potential division by zero in the
	Bumpmap plug-in and adjusts the range of the Depth parameter in
	the Swirl-Tile script (bug #509608).

2008-01-14  Kevin Cozens  <kcozens@cvs.gnome.org>

	Merged from trunk:

	* plug-ins/script-fu/scripts/script-fu-compat.init: Fixed definition
	of 'prog1' due to recent fixes enforcing R5RS syntax for 'let'.

2008-01-09  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* modules/colorsel_cmyk_lcms.c (colorsel_cmyk_class_init): don't
	abort on errors in lcms.

2008-01-09  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/common/convmatrix.c (convolve_image): round the result
	of the convolution. Fixes bug #508114.

2008-01-06  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/common/convmatrix.c (convolve_image): fixed out-of-bounds
	array access.

2008-01-05  Kevin Cozens  <kcozens@cvs.gnome.org>

	* configure.in: Set default value of jpeg_ok to no. From a patch
	by Hanno Boeck which fixes bug #507572.

2008-01-04  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/config/gimpdisplayconfig.c: changed the default marching ants
	speed to 200.

2008-01-04  Hans Breuer  <hans@breuer.org>

	* app/display/gimpdisplayshell-selection.c :
	marching ants with G_PRIORITY_DEFAULT_IDLE, fixes bug #479875

2008-01-04  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/tools/gimprotatetool.c (rotate_angle_changed): also update
	trans_info[REAL_ANGLE]. Fixes bug #507167.

2007-12-30  Sven Neumann  <sven@gimp.org>

	Merged from trunk:
